add upload endpoint, cleaning up repo
